syntax = "proto2";

enum Direction {
  UPTOWN = 0;
  DOWNTOWN = 1;
}

message LineArrivals {
  optional string line = 1;
  optional Direction direction = 2;
  repeated int64 timestamp = 3;
}

message StationStatus {
  optional string name = 1;
  repeated LineArrivals line = 2;
}

message Station {
  optional string id = 1;
  optional string name = 2;
}

message StationList {
  repeated Station station = 1;
}
